<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_buttons_ros2</name>
  <version>0.0.0</version>
  <description>Read the franka buttons and publish it in ROS 2</description>
  <maintainer email="j.j.hierck@student.utwente.nl">Jelle Hierck</maintainer>
  <license>MIT</license>

  <!-- ROS built-in dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Third-party ROS dependencies -->

  <!-- Pure python dependencies -->
  <!-- TODO: Currently installs the wrong version of websockets, use virtual environment instead (see README) -->
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
